force-app/main/default/objects/Lead_Interest__c/Lead_Interest__c.object-meta.xml
<CustomObject>
    <description>Academic Interest or Program a prospective student is interested in pursuing. The prospective student can be a Lead or a Contact.</description>
    <label>Lead Interest</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Lead Interest Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>