force-app/main/default/objects/Lead_Interest__c/fields/Academic_Interest__c.field-meta.xml
<CustomField>
    <fullName>Academic_Interest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[manual import] - Relation to the Acadmeic Intrest</description>
    <label>Academic Interest</label>
    <referenceTo>Academic_Interest__c</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Academic_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>