force-app/main/default/objects/Lead_Interest__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[manual import] - Relation to the college</description>
    <label>College</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Program</relationshipName>
    <type>Lookup</type>
</CustomField>