force-app/main/default/objects/Lead_Interest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[manual import] - Relatioship to the contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>