force-app/main/default/objects/Lead_Interest__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>[manual import] - Examples include: Qualified, Unqualified, No Longer Interested Field used for recruiting to determine if the Lead meets the requirements of the program.</description>
    <inlineHelpText>Does the Lead meet program requirements?</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>