force-app/main/default/objects/Lead_Interest__c/fields/External_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Number__c</fullName>
    <description>[manual import] - Sybase external application number. Used to match Lead Interest with partial application</description>
    <externalId>true</externalId>
    <label>External Application Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>