force-app/main/default/objects/Lead_Interest__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[manual import] -  Relationship to the lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>