force-app/main/default/objects/Lead_Interest__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[manual import] -  Look up to the Plan</description>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>