force-app/main/default/objects/Lead_Interest__c/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <description>[manual import] - Examples include: Advertisement, ASU UG, College Fair - Int, College Fair - US, Email, Employee Referral, Event, Partial App, Phone Call, Purchased List, Test Scores, Walk-in, Web Form</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>ASU UG</fullName>
            </value>
            <value>
                <fullName>College Fair - Int</fullName>
            </value>
            <value>
                <fullName>College Fair - US</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Partial App</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Test Scores</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>