force-app/main/default/objects/Lead_Interest__c/fields/Qualifying__c.field-meta.xml
<CustomField>
    <fullName>Qualifying__c</fullName>
    <description>[manual import] - Examples include: Interested, Undecided, No Longer Interested.  Prospective student's level of interest</description>
    <inlineHelpText>Measure of the prospective student's interest.</inlineHelpText>
    <label>Qualifying</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>