force-app/main/default/objects/Lead_Interest__c/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <description>[manual import] - Examples include: Coll Technology &amp; Innovation, College of Public Programs, Cronkite School-Journ/MassComm, Graduate Education, Health Solutions, Herberger Institute, Ira A Fulton Engineering, Liberal Arts &amp; Sciences, MaryLouFulton Teachers College, New Interdis Arts &amp; Sciences, Nursing &amp; Health Innovation, School of Letters &amp; Sciences, School of Sustainability, W.P. Carey School of Business, O'Connor College of Law, Degree Search, ASU Online, USA Today, EGSS Applying, EGSS Financing, EGSS GRE Prep, EGSS Personal Statement, Info Session - Online, Info Session - Campus, GRE, GRE Subject, TOEFL, CA Diversity, Idealist, NNE, Graduate College, Sun Devil Days, Saudi Arabiav</description>
    <label>Source Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>College of Public Programs</fullName>
            </value>
            <value>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </value>
            <value>
                <fullName>Graduate Education</fullName>
            </value>
            <value>
                <fullName>Health Solutions</fullName>
            </value>
            <value>
                <fullName>Herberger Institute</fullName>
            </value>
            <value>
                <fullName>Ira A Fulton Engineering</fullName>
            </value>
            <value>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>MaryLouFulton Teachers College</fullName>
            </value>
            <value>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </value>
            <value>
                <fullName>School of Letters &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>School of Sustainability</fullName>
            </value>
            <value>
                <fullName>W.P. Carey School of Business</fullName>
            </value>
            <value>
                <fullName>O'Connor College of Law</fullName>
            </value>
            <value>
                <fullName>Degree Search</fullName>
            </value>
            <value>
                <fullName>ASU Online</fullName>
            </value>
            <value>
                <fullName>USA Today</fullName>
            </value>
            <value>
                <fullName>EGSS Applying</fullName>
            </value>
            <value>
                <fullName>EGSS Financing</fullName>
            </value>
            <value>
                <fullName>EGSS GRE Prep</fullName>
            </value>
            <value>
                <fullName>EGSS Personal Statement</fullName>
            </value>
            <value>
                <fullName>Info Session - Online</fullName>
            </value>
            <value>
                <fullName>Info Session - Campus</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>GRE Subject</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>CA Diversity</fullName>
            </value>
            <value>
                <fullName>Idealist</fullName>
            </value>
            <value>
                <fullName>NNE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>