force-app/main/default/objects/Lead_Interest__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <description>[manual import] - Send email</description>
    <formula>IF(ISBLANK( Contact__c ),  Leads__r.Email,  Contact__r.Email   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Email</label>
    <type>Text</type>
</CustomField>