force-app/main/default/objects/Lead_Interest__c/fields/Send_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_ID__c</fullName>
    <description>[manual import] - Retrieves ID for the type of Lead Interest. If it is related to a Lead record, then Lead ID. Else it is Contact ID.</description>
    <formula>IF( ISBLANK( Contact__c ), Leads__r.Id,  Contact__r.Id )</formula>
    <label>Send Email ID</label>
    <type>Text</type>
</CustomField>