force-app/main/default/objects/Lead_Interest__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[manual import] - Relationship to the term</description>
    <label>Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Lead Interests</relationshipLabel>
    <relationshipName>Lead_Interests_Term</relationshipName>
    <type>Lookup</type>
</CustomField>