force-app/main/default/objects/Lead_Interest__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[manual import] - Used to flag records as tests so they will not appear in reports.</description>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>