force-app/main/default/objects/Lead_Interest__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>Viewable to non-administrators</description>
    <label>User</label>
</RecordType>