force-app/main/default/objects/Lead_Interest__c/listViews/Applied_This_Month.listView-meta.xml
<ListView>
    <fullName>Applied_This_Month</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Leads__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Applied This Month</label>
    <sharedTo />
</ListView>